--- a/index.html
+++ b/index.html
@@ -11,107 +11,109 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
-    <link rel="stylesheet" href="./css/main.min.css">
-</head>
-    
+        <link rel="stylesheet" href="./css/main.min.css">
+</head>   
 <body>
     <!--Header-->
     <header class="header">
-        <div class="main-nav container">
-        <a href="./index.html" class="logo link"><span class="web">Web</span>Studio</a>
-        <nav class="nav">
-            <ul class="site-nav list">
-                <li class="item">
-                    <a href="./index.html" class="link current">Студія</a></li>
-                <li class="item">
-                    <a href="./portfolio.html" class="link">Портфоліо</a></li>
-                <li class="item">
-                    <a href="" class="link">Контакти</a></li>
+        <div class="header__nav container">
+        <a href="./index.html" class="logo link"><span class="logo--accent">Web</span>Studio</a>
+        <nav class="navigation">
+            <ul class="nav list">
+                <li class="nav__item">
+                    <a href="./index.html" class="nav__link link current">Студія</a></li>
+                <li class="nav__item">
+                    <a href="./portfolio.html" class="nav__link link">Портфоліо</a></li>
+                <li class="nav__item">
+                    <a href="" class="nav__link link">Контакти</a></li>
             </ul>
         </nav>
-            <ul class="top-contact list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contact-link link">
-                    <svg class="nav-icon" width="16px" height="12px"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
-                </li>
+        <ul class="contacts list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="contacts__link link">
+                <svg class="contacts__icon" width="16px" height="12px">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a>
+            </li>
                                 
-                <li class="item"><a href="tel:+380961111111" class="contact-link link">
-                    <svg class="nav-icon" width="10px" height="16px"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
-                </li>
+            <li class="item"><a href="tel:+380961111111" class="contacts__link link">
+                <svg class="contacts__icon" width="10px" height="16px">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>+38 096 111 11 11</a>
+            </li>
             </ul>
         </div>
     </header>
     <!--Main-->
     <main>
-        <!--Solution-->
+        <!--Hero-->
         <section class="hero section">
             <div class="container">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button data-modal-open type="button" class="button hero-button">Замовити послугу</button>
+            <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+            <button data-modal-open type="button" class="button hero__button">Замовити послугу</button>
             </div>
         </section>
         <!--About-Hidden h2-->
-        <section class="section-about section">
+        <section class="about section">
             <div class="container">
-            <h2 class="section-title">About</h2>
-            <ul class="about-list list" >
+            <h2 class="section__title">About</h2>
+            <ul class="about__list list" >
                 <li class="item">
-                    <div class="about-icon-frame"><svg class="about-icon" width="70px" height=70px><use href="./images/icons.svg#icon-antenna"></use></svg>
+                    <div class="about__icon"><svg width="70px" height=70px><use href="./images/icons.svg#icon-antenna"></use></svg>
                     </div>
-                    <h3 class="about-title">Увага до деталей</h3>
-                    <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="about__title">Увага до деталей</h3>
+                    <p class="about__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li class="item">
-                    <div class="about-icon-frame"><svg class="about-icon" width="70px" height=70px><use href="./images/icons.svg#icon-clock"></use></svg>
+                    <div class="about__icon"><svg width="70px" height=70px><use href="./images/icons.svg#icon-clock"></use></svg>
                     </div>
-                    <h3 class=" about-title">Пунктуальність</h3>
-                    <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class=" about__title">Пунктуальність</h3>
+                    <p class="about__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li class="item">
-                    <div class="about-icon-frame"><svg class="about-icon" width="70px" height=70px><use href="./images/icons.svg#icon-diagram"></use></svg>
+                    <div class="about__icon"><svg width="70px" height=70px><use href="./images/icons.svg#icon-diagram"></use></svg>
                     </div>
-                    <h3 class=" about-title">Плланування</h3>
-                    <p class="about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class=" about__title">Плланування</h3>
+                    <p class="about__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li class="item">
-                    <div class="about-icon-frame"><svg class="about-icon" width="70px" height=70px><use href="./images/icons.svg#icon-astronaut"></use></svg>
+                    <div class="about__icon"><svg width="70px" height=70px><use href="./images/icons.svg#icon-astronaut"></use></svg>
                     </div>
-                    <h3 class=" about-title">Сучасні технології</h3>
-                    <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class=" about__title">Сучасні технології</h3>
+                    <p class="about__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
             </div>
         </section>
-        <!--What we do-->
-        <section class="section-what section">
+        <!--Solution-->
+        <section class="solution section">
             <div class="container">
-            <h2 class="what-title">Чим ми займаємося</h2>
-            <ul class="what-list list">
-                <li class="what-item item">
-                    <div class="what-thumb">
-                    <img class="what-picture" src="./images/code.jpg" alt="Програмування" width="370" height="294">
-                    <p class="what-description-title">Десктопні додатки</p>
+            <h2 class="solution__title">Чим ми займаємося</h2>
+            <ul class="direction list">
+                <li class="direction__item item">
+                    <div class="direction__thumb">
+                    <img src="./images/code.jpg" alt="Програмування" width="370" height="294">
+                    <p class="direction__description">Десктопні додатки</p>
                     </div>
                 </li>
-                <li class="what-item item">
-                    <div class="what-thumb">
+                <li class="direction__item item">
+                    <div class="direction__thumb">
                     <img src="./images/markup.jpg" alt="Верстка" width="370" height="294">
-                    <p class="what-description-title">Мобільні додатки</p>
+                    <p class="direction__description">Мобільні додатки</p>
                     </div>
                 </li>
-                <li class="what-item item">
-                    <div class="what-thumb">
+                <li class="direction__item item">
+                    <div class="direction__thumb">
                     <img src="./images/design.jpg" alt="Дизайн" width="370" height="294">
-                    <p class="what-description-title">Дизайнерські рішення</p>
+                    <p class="direction__description">Дизайнерські рішення</p>
                     </div>
                 </li>
             </ul>
             </div>
         </section>
         <!--Our comand-->
-        <section class="section-command section">
+        <section class="command section">
             <div class="container">
-        <h2 class="command-maintitle">Наша команда</h2>
+        <h2 class="command__title">Наша команда</h2>
         <ul class="command-list list">
             <li class="item">
                 <img src="./images/demyanko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
@@ -320,7 +322,7 @@
         <div class="container">
         <div class="footer-position">
             <div>
-            <a href="./index.html" class="logo footer link color"><span class="web">Web</span>Studio</a>
+            <a href="./index.html" class="logo footer link color"><span class="logo--accent">Web</span>Studio</a>
         <address class="address">            
             <ul class="footer-list list">
                 <li class="item"><a href="https://goo.gl/maps/Yz2Q7pybt4rktHYk7" class="footer-contact link">м. Київ, пр-т Лесі Українки, 26</a></li>
