--- a/portfolio.html
+++ b/portfolio.html
@@ -11,35 +11,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
    <!--Header-->
-   <header class="header">
-    <div class="main-nav container">
-    <a href="./index.html" class="logo link"><span class="web">Web</span>Studio</a>
-    <nav>
-        <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link ">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li class="item"><a href="" class="link">Контакти</a></li>
-        </ul>
-    </nav>
-        <ul class="top-contact list">
-            <li class="item"><a href="mailto:info@devstudio.com" class="contact-link link">
-                    <svg class="nav-icon" width="16px" height="12px">
+<header class="header">
+    <div class="header__nav container">
+        <a href="./index.html" class="logo link"><span class="logo--accent">Web</span>Studio</a>
+        <nav class="navigation">
+            <ul class="nav list">
+                <li class="nav__item">
+                    <a href="./index.html" class="nav__link link">Студія</a>
+                </li>
+                <li class="nav__item">
+                    <a href="./portfolio.html" class="nav__link link current">Портфоліо</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link link">Контакти</a>
+                </li>
+            </ul>
+        </nav>
+        <ul class="contacts list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="contacts__link link">
+                    <svg class="contacts__icon" width="16px" height="12px">
                         <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>info@devstudio.com</a>
             </li>
-        
-            <li class="item"><a href="tel:+380961111111" class="contact-link link">
-                    <svg class="nav-icon" width="10px" height="16px">
+
+            <li class="item"><a href="tel:+380961111111" class="contacts__link link">
+                    <svg class="contacts__icon" width="10px" height="16px">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a>
             </li>
         </ul>
-        </div>
+    </div>
 </header>
 <!-- MAIN -->
 <main>
@@ -209,7 +214,7 @@
     <div class="container">
         <div class="footer-position">
             <div>
-                <a href="./index.html" class="logo footer link color"><span class="web">Web</span>Studio</a>
+                <a href="./index.html" class="logo footer link color"><span class="logo--accent">Web</span>Studio</a>
 
                 <address class="address">
                     <ul class="footer-list list">
