--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,17 @@
    <!--Header-->
 <header class="header">
     <div class="header__nav container">
-        <a href="./index.html" class="logo link"><span class="logo--accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo link"><span class="logo__accent">Web</span>Studio</a>
         <nav class="navigation">
-            <ul class="nav list">
-                <li class="nav__item">
-                    <a href="./index.html" class="nav__link link">Студія</a>
+            <ul class="navigation__list list">
+                <li class="navigation__item">
+                    <a href="./index.html" class="navigation__link link">Студія</a>
                 </li>
-                <li class="nav__item">
-                    <a href="./portfolio.html" class="nav__link link current">Портфоліо</a>
+                <li class="navigation__item">
+                    <a href="./portfolio.html" class="navigation__link link current">Портфоліо</a>
                 </li>
-                <li class="nav__item">
-                    <a href="" class="nav__link link">Контакти</a>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link link">Контакти</a>
                 </li>
             </ul>
         </nav>
@@ -48,19 +48,19 @@
 </header>
 <!-- MAIN -->
 <main>
-    <section class="project">
+    <section class="portfolio">
     <div class="container">
     <h1 hidden>Проекти</h1>
     <!-- Buttons -->
     <ul class="menu list">
-        <li class="item"><button type="button" class="menu__button">Усі</button></li>
-        <li class="item"><button type="button" class="menu__button">Веб-сайти</button></li>
-        <li class="item"><button type="button" class="menu__button">Додатки</button></li>
-        <li class="item"><button type="button" class="menu__button">Дизайн</button></li>
-        <li class="item"><button type="button" class="menu__button">Маркетинг</button></li>
+        <li class="item"><button type="button" class="menu__button button">Усі</button></li>
+        <li class="item"><button type="button" class="menu__button button">Веб-сайти</button></li>
+        <li class="item"><button type="button" class="menu__button button">Додатки</button></li>
+        <li class="item"><button type="button" class="menu__button button">Дизайн</button></li>
+        <li class="item"><button type="button" class="menu__button button">Маркетинг</button></li>
     </ul>
     <!-- Projects -->
-        <ul class=" project__list list">
+        <ul class="project list">
         <li class="project__item">
             <div class="project__thumb">
                 <img src="./images/tehhokrak.jpg" width="370" height="294" alt="Технокряк">
@@ -213,7 +213,7 @@
     <div class="container">
         <div class="footer__position">
             <div>
-                <a href="./index.html" class="logo footer__logo link"><span class="logo--accent">Web</span>Studio</a>
+                <a href="./index.html" class="logo footer__logo link"><span class="logo__accent">Web</span>Studio</a>
                 <address class="address">
                     <ul class="address-list list">
                         <li class="address__item item"><a href="https://goo.gl/maps/Yz2Q7pybt4rktHYk7"
@@ -227,30 +227,30 @@
             </div>
             <div class="join">
                 <h2 class="join__title">Приєднуйтесь</h2>
-                <ul class="join__list list">
-                    <li class="join__item item">
-                        <a href="" class="join__link">
+                <ul class="social list">
+                    <li class="social__item item">
+                        <a href="" class="social__link join__link">
                             <svg class="join__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="join__item item">
-                        <a href="" class="join__link">
+                    <li class="social__item item">
+                        <a href="" class="social__link join__link">
                             <svg class="join__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="join__item item">
-                        <a href="" class="join__link">
+                    <li class="social__item item">
+                        <a href="" class="social__link join__link">
                             <svg class="join__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="join__item item">
-                        <a href="" class="join__link">
+                    <li class="social__item item">
+                        <a href="" class="social__link join__link">
                             <svg class="join__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
